--- a/beta.html
+++ b/beta.html
@@ -55,9 +55,8 @@
             padding: 0 var(--space-xl);
         }
 
-        /* Breiterer Container für Prototyp-Embed */
         .wide-container {
-            max-width: 1600px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 0 var(--space-xl);
         }
@@ -176,6 +175,9 @@
             padding: var(--space-xl);
             box-shadow: var(--shadow-card);
             margin-top: var(--space-2xl);
+            max-width: 960px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .codepen-header {
@@ -197,15 +199,22 @@
         .embed-frame-wrapper {
             display: flex;
             justify-content: center;
+            overflow: hidden;
+            /* Sichtbare Größe des „Screens“ (runtergerechnet) */
+            width: 864px;  /* 1440 * 0.6 */
+            height: 540px; /*  900 * 0.6 */
+            margin: 0 auto var(--space-lg);
+            border-radius: 20px;
+            box-shadow: 0 2px 12px rgba(0,0,0,0.12);
         }
 
         .codepen-embed {
-            width: 390px;
-            max-width: 100%;
-            height: 844px;
-            border: 1px solid #e0e0e0;
-            border-radius: 20px;
-            margin-bottom: var(--space-lg);
+            /* Virtuelle Größe: genug Platz, damit im iframe keine Scrollbars nötig sind */
+            width: 1440px;
+            height: 900px;
+            border: none;
+            transform: scale(0.6);
+            transform-origin: top left;
         }
 
         /* ===========================
@@ -230,6 +239,22 @@
         /* ===========================
            RESPONSIVE
            =========================== */
+        @media (max-width: 940px) {
+            .embed-frame-wrapper {
+                width: 100%;
+                max-width: 100%;
+                height: auto;
+                overflow-x: auto;
+            }
+
+            .codepen-embed {
+                /* Auf kleineren Screens lieber volle Breite + scrollen, statt zu starkes Scaling */
+                transform: none;
+                width: 1000px;
+                height: 700px;
+            }
+        }
+
         @media (max-width: 640px) {
             h1 {
                 font-size: 24px;
@@ -246,11 +271,6 @@
 
             .prototype-grid {
                 grid-template-columns: 1fr;
-            }
-
-            .codepen-embed {
-                width: 100%;
-                height: 844px;
             }
         }
     </style>
