--- a/beta.html
+++ b/beta.html
@@ -247,7 +247,7 @@
             }
         }
 
-        /* Smartphones: volle Breite, responsive iFrame mit 16:9-Ratio */
+        /* Smartphones: volle Breite, hohe iFrame-Fläche (≈80% des Screens) */
         @media (max-width: 640px) {
             h1 {
                 font-size: 24px;
@@ -273,16 +273,15 @@
             .embed-frame-wrapper {
                 width: 100%;
                 max-width: 100%;
-                /* Höhe automatisch aus Breite ableiten (16:9) */
-                aspect-ratio: 16 / 9;
-                height: auto;
+                /* Statt 16:9 – nutze den Screen: */
+                height: 80vh;          /* hier kannst du 75–90 anpassen, je nach Geschmack */
                 border-radius: 16px;
             }
 
             .codepen-embed {
                 width: 100%;
                 height: 100%;
-                transform: none;          /* kein künstliches Scaling auf dem Handy */
+                transform: none;      /* kein künstliches Scaling auf dem Handy */
                 transform-origin: unset;
             }
         }
